pre-mustgather/mustgather/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-f00c7f54f908ad004fe872d63cdf89c65a37aef0718a124fc3497bb5d990de42/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/baremetal-operator-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2025-11-17T09:22:12Z"
  generation: 2
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:include.release.openshift.io/single-node-developer: {}
          f:service.beta.openshift.io/inject-cabundle: {}
      f:webhooks:
        .: {}
        k:{"name":"baremetalhost.metal3.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"bmceventsubscription.metal3.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-baremetal-operator
    operation: Update
    time: "2025-11-17T09:22:12Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"baremetalhost.metal3.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"bmceventsubscription.metal3.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2025-11-17T09:22:12Z"
  name: baremetal-operator-validating-webhook-configuration
  resourceVersion: "10853"
  uid: a041535c-4ceb-482f-9309-ce197145ffd5
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSEtVak9wekp2T293RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk16TTNNVEl5TURBZQpGdzB5TlRFeE1UY3dPVEl3TVRsYUZ3MHlPREF4TVRZd09USXdNakJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOak16TnpFeU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREpac2xHcXRBeUcrQUYxYkNiVmxVczlzUVJMa21KN2w2dgpsVXpEd2Y3Rk9GaE [...]
    service:
      name: baremetal-operator-webhook-service
      namespace: openshift-machine-api
      path: /validate-metal3-io-v1alpha1-baremetalhost
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: baremetalhost.metal3.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metal3.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - baremetalhosts
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSEtVak9wekp2T293RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk16TTNNVEl5TURBZQpGdzB5TlRFeE1UY3dPVEl3TVRsYUZ3MHlPREF4TVRZd09USXdNakJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOak16TnpFeU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREpac2xHcXRBeUcrQUYxYkNiVmxVczlzUVJMa21KN2w2dgpsVXpEd2Y3Rk9GaE [...]
    service:
      name: baremetal-operator-webhook-service
      namespace: openshift-machine-api
      path: /validate-metal3-io-v1alpha1-bmceventsubscription
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: bmceventsubscription.metal3.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - metal3.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bmceventsubscriptions
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
