pre-mustgather/mustgather/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-f00c7f54f908ad004fe872d63cdf89c65a37aef0718a124fc3497bb5d990de42/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/controlplanemachineset.machine.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    capability.openshift.io/name: MachineAPI
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2025-11-17T09:22:09Z"
  generation: 2
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:capability.openshift.io/name: {}
          f:exclude.release.openshift.io/internal-openshift-hosted: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"5b5cce96-2701-4c85-af4f-4dbf8e0e7775"}: {}
      f:webhooks:
        .: {}
        k:{"name":"controlplanemachineset.machine.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-version-operator
    operation: Update
    time: "2025-11-17T09:22:09Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"controlplanemachineset.machine.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2025-11-17T09:22:09Z"
  name: controlplanemachineset.machine.openshift.io
  ownerReferences:
  - apiVersion: config.openshift.io/v1
    controller: true
    kind: ClusterVersion
    name: version
    uid: 5b5cce96-2701-4c85-af4f-4dbf8e0e7775
  resourceVersion: "10741"
  uid: 2d2f7c42-bec3-4dc8-997b-6e4c9efc983b
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSEtVak9wekp2T293RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk16TTNNVEl5TURBZQpGdzB5TlRFeE1UY3dPVEl3TVRsYUZ3MHlPREF4TVRZd09USXdNakJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOak16TnpFeU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREpac2xHcXRBeUcrQUYxYkNiVmxVczlzUVJMa21KN2w2dgpsVXpEd2Y3Rk9GaE [...]
    service:
      name: control-plane-machine-set-operator
      namespace: openshift-machine-api
      path: /validate-machine-openshift-io-v1-controlplanemachineset
      port: 9443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: controlplanemachineset.machine.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - machine.openshift.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - controlplanemachinesets
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
