pre-mustgather/mustgather/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-f00c7f54f908ad004fe872d63cdf89c65a37aef0718a124fc3497bb5d990de42/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/machine-api.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2025-11-17T09:22:11Z"
  generation: 2
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:service.beta.openshift.io/inject-cabundle: {}
      f:webhooks:
        .: {}
        k:{"name":"validation.machine.machine.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"validation.machineset.machine.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: machine-api-operator
    operation: Update
    time: "2025-11-17T09:22:11Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"validation.machine.machine.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"validation.machineset.machine.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2025-11-17T09:22:11Z"
  name: machine-api
  resourceVersion: "10817"
  uid: 22960f22-7fd6-44bb-81bc-cb95aa5623dc
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSEtVak9wekp2T293RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk16TTNNVEl5TURBZQpGdzB5TlRFeE1UY3dPVEl3TVRsYUZ3MHlPREF4TVRZd09USXdNakJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOak16TnpFeU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREpac2xHcXRBeUcrQUYxYkNiVmxVczlzUVJMa21KN2w2dgpsVXpEd2Y3Rk9GaE [...]
    service:
      name: machine-api-operator-webhook
      namespace: openshift-machine-api
      path: /validate-machine-openshift-io-v1beta1-machine
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: validation.machine.machine.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - machine.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - machines
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSEtVak9wekp2T293RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk16TTNNVEl5TURBZQpGdzB5TlRFeE1UY3dPVEl3TVRsYUZ3MHlPREF4TVRZd09USXdNakJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOak16TnpFeU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREpac2xHcXRBeUcrQUYxYkNiVmxVczlzUVJMa21KN2w2dgpsVXpEd2Y3Rk9GaE [...]
    service:
      name: machine-api-operator-webhook
      namespace: openshift-machine-api
      path: /validate-machine-openshift-io-v1beta1-machineset
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: validation.machineset.machine.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - machine.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinesets
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
