pre-mustgather/mustgather/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-f00c7f54f908ad004fe872d63cdf89c65a37aef0718a124fc3497bb5d990de42/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/performance-addon-operator.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    capability.openshift.io/name: NodeTuning
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2025-11-17T09:05:49Z"
  generation: 2
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:capability.openshift.io/name: {}
          f:include.release.openshift.io/ibm-cloud-managed: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:include.release.openshift.io/single-node-developer: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"5b5cce96-2701-4c85-af4f-4dbf8e0e7775"}: {}
      f:webhooks:
        .: {}
        k:{"name":"vwb.performance.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-version-operator
    operation: Update
    time: "2025-11-17T09:05:49Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"vwb.performance.openshift.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2025-11-17T09:20:31Z"
  name: performance-addon-operator
  ownerReferences:
  - apiVersion: config.openshift.io/v1
    controller: true
    kind: ClusterVersion
    name: version
    uid: 5b5cce96-2701-4c85-af4f-4dbf8e0e7775
  resourceVersion: "7219"
  uid: 69df1a3c-a5b1-4a19-b182-0f282e251c2e
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSEtVak9wekp2T293RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjMk16TTNNVEl5TURBZQpGdzB5TlRFeE1UY3dPVEl3TVRsYUZ3MHlPREF4TVRZd09USXdNakJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNOak16TnpFeU1qQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREpac2xHcXRBeUcrQUYxYkNiVmxVczlzUVJMa21KN2w2dgpsVXpEd2Y3Rk9GaE [...]
    service:
      name: performance-addon-operator-service
      namespace: openshift-cluster-node-tuning-operator
      path: /validate-performance-openshift-io-v2-performanceprofile
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vwb.performance.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - performance.openshift.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - performanceprofiles
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
